--- a/ansible/roles/zsh/tasks/main.yml
+++ b/ansible/roles/zsh/tasks/main.yml
@@ -4,14 +4,12 @@
 
 - name: zsh | Installs zsh | apt
   become: yes
-  become_user: root
   apt:
     name: zsh
     state: present
 
 - name: zsh | Sets zsh as default shell for root | command
   become: yes
-  become_user: root
   command: chsh -s /bin/zsh
   register: zsh_for_root
   failed_when: zsh_for_root.rc >= 1
@@ -19,30 +17,32 @@
 
 - name: zsh | Sets zsh as default shell for {{ dotfiles_user }} | command
   become: yes
-  become_user: root
   command: chsh -s /bin/zsh {{ dotfiles_user }}
   register: zsh_for_user
   failed_when: zsh_for_user.rc >= 1
   changed_when: zsh_for_user.rc == 0
 
-- name: zsh | Checks for oh-my-zsh installation | stat
-  stat:
-    path: "{{ dotfiles_user_home }}/.oh-my-zsh"
-  register: oh_my_zsh_stat
+- name: zsh | Check if oh-my-zsh already exists in /opt | stat 
+  stat: 
+    path: /opt/oh-my-zsh/
+  register: opt_oh_my_zsh
 
 - name: zsh | Installs oh-my-zsh | raw
-  raw: 'sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"'
-  when: not oh_my_zsh_stat.stat.exists
+  raw: 'ZSH=/opt/oh-my-zsh sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"'
+  become: yes
+  when: not opt_oh_my_zsh.stat.exists
 
 - name: zsh | Copies .zshrc | template
   template:
     src: "zshrc.j2"
-    dest: "{{ dotfiles_user_home }}/.zshrc"
+    dest: "{{ dotfiles_config_root }}/.zshrc"
+    force: yes
 
 - name: zsh | Installs hab | git
   git:
     repo: "https://github.com/alexdesousa/hab.git"
-    dest: "{{ dotfiles_user_home }}/.oh-my-zsh/custom/plugins/hab"
+    dest: "/opt/oh-my-zsh/custom/plugins/hab"
     clone: yes
     update: yes
     force: yes
+  become: yes
