--- a/ansible/roles/git/tasks/main.yml
+++ b/ansible/roles/git/tasks/main.yml
@@ -9,14 +9,13 @@
     name: git
     state: present
 
-- name: Git | Links global gitignore file | file
-  file:
-    src: "{{ dotfiles_home }}/roles/git/files/gitignore_global.link"
-    dest: "{{ dotfiles_user_home }}/.gitignore_global"
-    state: link
+- name: Git | Copy global gitignore file | copy
+  copy:
+    src: "{{ dotfiles_ansible_root }}/roles/git/files/gitignore_global.link"
+    dest: "{{ dotfiles_config_root }}/.gitignore_global"
     force: yes
 
 - name: Git | Copies git config | template
   template:
     src: "gitconfig.j2"
-    dest: "{{ dotfiles_user_home }}/.gitconfig"
+    dest: "{{ dotfiles_config_root }}/.gitconfig"
