--- a/ansible/roles/asdf/tasks/main.yml
+++ b/ansible/roles/asdf/tasks/main.yml
@@ -17,17 +17,10 @@
     path: "{{ dotfiles_config_root }}/asdf/.asdf/"
     state: directory
 
-- name: asdf | Copies asdf.zsh | copy
+- name: asdf | Copies asdf.zsh to zsh directory | copy
   copy:
     src: "asdf.zsh"
-    dest: "{{ dotfiles_config_root }}/asdf/.asdf/asdf.zsh"
-    force: yes
-
-- name: asdf | Link asdf.zsh to zsh config | file
-  file:
-    src: "{{ dotfiles_config_root }}/asdf/.asdf/asdf.zsh"
     dest: "{{ dotfiles_config_root }}/zsh/.zsh/asdf.zsh"
-    state: link
     force: yes
 
 - name: asdf | Common build utilities | apt
