--- a/ansible/roles/asdf/defaults/main.yml
+++ b/ansible/roles/asdf/defaults/main.yml
@@ -1,6 +1,6 @@
 asdf_version: 0.8.1
 
-asdf_dir: "{{ dotfiles_user_home }}/.asdf"
+asdf_dir: "/opt/asdf"
 asdf_bin: "{{ asdf_dir }}/bin/asdf"
 asdf_src: "{{ asdf_dir}}/asdf.sh"
 
