Add Rails support

--- a/ansible/dotfiles.yml
+++ b/ansible/dotfiles.yml
@@ -24,9 +24,9 @@
     - role: elixir
       tags:
         - elixir
-    - role: ruby
+    - role: rails
       tags:
-        - ruby
+        - rails
     - role: nodejs
       tags:
         - nodejs
