Add PHP support

--- a/ansible/dotfiles.yml
+++ b/ansible/dotfiles.yml
@@ -27,6 +27,9 @@
     - role: nodejs
       tags:
         - nodejs
+    - role: php
+      tags:
+        - php
     - role: docker
       tags:
         - docker
