--- a/ansible/roles/php/defaults/main.yml
+++ b/ansible/roles/php/defaults/main.yml
@@ -7,6 +7,9 @@ php_dependencies:
   - libonig-dev
   - libpq-dev
   - libzip-dev
+  - mlocate
+  - libsqlite3-dev
+  - libreadline-dev
 
 php_versions:
  - 8.0.7
