Enable mail delivery through postfix Gmail relay

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -2,6 +2,10 @@
 ###############################################################################
 # Base system
 
+- name: Base | Set host name | hostname
+  hostname:
+    name: "{{ hostname }}"
+
 - name: Base | Update and upgrade packages | apt
   become: yes
   apt:
