--- a/ansible/roles/git/defaults/main.yml
+++ b/ansible/roles/git/defaults/main.yml
@@ -1,2 +1,2 @@
-git_name: "{{ lookup('env', 'DOTFILES_GIT_NAME') }}"
-git_email: "{{ lookup('env', 'DOTFILES_GIT_EMAIL') }}"
+git_name: "{{ lookup('env', 'DOTFILES_USER_NAME_FULL') }}"
+git_email: "{{ lookup('env', 'DOTFILES_USER_EMAIL') }}"
