--- a/ansible/roles/mail/defaults/main.yml
+++ b/ansible/roles/mail/defaults/main.yml
@@ -2,7 +2,7 @@ mail_name: "{{ hostname }}"
 
 mail_relay_host: "{{ lookup('env', 'DOTFILES_SMTP_RELAY_HOST') }}"
 mail_smtp_app_key: "{{ lookup('env', 'DOTFILES_SMTP_APP_KEY') }}"
-mail_smtp_user: "{{ lookup('env', 'DOTFILES_GIT_EMAIL') }}"
+mail_smtp_user: "{{ lookup('env', 'DOTFILES_USER_EMAIL') }}"
 
 mail_packages:
   - postfix
