--- a/ansible/dotfiles.yml
+++ b/ansible/dotfiles.yml
@@ -33,6 +33,9 @@
     - role: code
       tags:
         - code
+    - role: docker
+      tags:
+        - docker
     - role: mail
       tags:
         - mail
