Add Java support

--- a/ansible/dotfiles.yml
+++ b/ansible/dotfiles.yml
@@ -36,6 +36,9 @@
     - role: docker
       tags:
         - docker
+    - role: java
+      tags:
+        - java
     - role: mail
       tags:
         - mail
