--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -1,3 +1,5 @@
+docker_user: "{{ lookup('env', 'DOTFILES_USER_NAME_SHORT') }}"
+
 docker_dependencies:
   - apt-transport-https
   - ca-certificates
