Add Elixir support in Code

--- a/ansible/roles/code/defaults/main.yml
+++ b/ansible/roles/code/defaults/main.yml
@@ -16,4 +16,4 @@ code_extensions:
   - naco-siren.gradle-language
   - richardwillis.vscode-gradle
   - formulahendry.code-runner
-
+  - jakebecker.elixir-ls
