Add TailwindCSS support in vscode

--- a/ansible/roles/code/defaults/main.yml
+++ b/ansible/roles/code/defaults/main.yml
@@ -17,5 +17,6 @@ code_extensions:
   - richardwillis.vscode-gradle
   - formulahendry.code-runner
   - jakebecker.elixir-ls
+  - bradlc.vscode-tailwindcss
 
 code_settings_path: ".config/Code/User"
