Add autosave after delay to Code config

--- a/ansible/roles/code/files/settings.json
+++ b/ansible/roles/code/files/settings.json
@@ -5,5 +5,7 @@
     },
     "terminal.integrated.fontFamily": "Hack",
     "editor.fontFamily": "Fira Code",
-    "editor.fontLigatures": true
+    "editor.fontLigatures": true,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 250,
 }
