Exclude .d.td and .js files in TypeScript editing in Code

--- a/ansible/roles/code/files/settings.json
+++ b/ansible/roles/code/files/settings.json
@@ -8,4 +8,9 @@
     "editor.fontLigatures": true,
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 250,
+    "files.exclude": {
+        "**/*.js": {"when": "$(basename).ts"},
+        "**/*.d.ts": {"when": "$(basename).ts"},
+        "**/*.js.map": true
+    }
 }
